--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.16.2",
     "jade": "^1.11.0",
     "keystone": "latest",
+    "phantom": "^4.0.12",
     "underscore": "latest"
   },
   "engines": {
